<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".registerUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_user"
            android:textAlignment="center"
            android:textColor="@color/colorHeading"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/registerActivity_profilepic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_profilepic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/advent_pro_semibold"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/first_name"
            android:textColor="@color/colorTitle"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/registerActivity_firstName"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_screen_edittext_background"
            android:hint="Enter your First Name"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/advent_pro_semibold"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"/>

        <EditText
            android:id="@+id/registerActivity_lastName"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_screen_edittext_background"
            android:hint="Enter your Last Name"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/advent_pro_semibold"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"/>

        <EditText
            android:id="@+id/registerActivity_DOB"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_screen_edittext_background"
            android:enabled="true"
            android:focusable="false"
            android:hint="Click to Set Date of Birth"
            android:padding="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/advent_pro_semibold"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"/>

        <EditText
            android:id="@+id/registerActivity_emailID"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_screen_edittext_background"
            android:hint="Enter your Email "
            android:padding="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/advent_pro_semibold"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"/>

        <EditText
            android:id="@+id/registerActivity_password"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_screen_edittext_background"
            android:hint="Enter your Password"
            android:padding="10dp" />

        <Button
            android:id="@+id/registerActivity_registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/register"
            android:textColor="@color/colorButtonText" />

        <TextView
            android:id="@+id/registerActivity_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/already_registered_login"
            android:textColor="@color/colorHeading"
            android:textSize="18sp"

            />

    </LinearLayout>

</ScrollView>
