<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/login"
        android:textColor="#EA80FC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="390dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="346dp"
        android:src="@drawable/login_screen_edittext_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="334dp"
        android:layout_height="30dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/login_id"
        android:textColor="@color/colorTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.183" />

    <EditText
        android:id="@+id/loginActivity_emailID"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/login_screen_edittext_background"
        android:hint="@string/enter_your_email_id"
        android:padding="8dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.423"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="334dp"
        android:layout_height="30dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/login_password"
        android:textColor="@color/colorTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.588" />

    <EditText
        android:id="@+id/loginActivity_password"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginBottom="88dp"
        android:autofillHints=""
        android:background="@drawable/login_screen_edittext_background"
        android:hint="enter your password"
        android:padding="8dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginActivity_loginBtn"
        android:layout_width="313dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_backgroundi"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_password"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/loginActivity_registerUserText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/new_user_click_here_to_register"
        android:textColor="#EA80FC"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.882" />

</androidx.constraintlayout.widget.ConstraintLayout>